--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==21.3
-fastapi==0.103.2
-uvicorn==0.23.2
-openai==1.54.4
+Flask==2.2.5
+gunicorn==21.2.0
+openai==1.52.1
+python-telegram-bot==21.6
